--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Калькулятор</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <main class="main">
     <div class="main-wrap">
-      <section class="playing-ground calc">
+      <section class="calc">
         <div class="calc__wrap">
           <input class="calc__input" type="text">
           <output class="calc__output"></output>
